test-suite/tests/roundtrip/invalid/semantic/typecheck/partition/04/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/partition/04/input.essence:6:14:
  |
6 |              partition({[true; int(1..1)]}) - partition({[false; int(1..1)]}))
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from matrix indexed by [int] of bool

tests/roundtrip/invalid/semantic/typecheck/partition/04/input.essence:6:47:
  |
6 |              partition({[true; int(1..1)]}) - partition({[false; int(1..1)]}))
  |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected: "Number / set/ mset / relation / function"
	Got: partition from matrix indexed by [int] of bool

